# tensorflow

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  NOTICE  OWNERS  README.en.md  README.md  RELEASE.md  WORKSPACE.tpl  build.sh  configure.py  module.mk  tfplugin-config.cmake.in  workspace.bzl.tpl
cmake/: nlohmann_json.cmake  secure_c.cmake  tensorflow.cmake
conver_tf2npu/: README.md  ast_impl.py  conver.py  conver_by_ast.py  file_op.py  main.py  util.py  util_global.py
conver_tf2npu/mappings/: ast.json
inc/common/opskernel/: ops_kernel_info_store.h  ops_kernel_info_types.h
inc/common/optimizer/: graph_optimizer.h
inc/common/proto/: fusion_model.proto  ge_api.proto  ge_ir.proto  insert_op.proto  om.proto  op_mapping_info.proto  optimizer_priority.proto  task.proto
inc/common/util/: platform_info.h  platform_info_def.h
inc/common/util/ai_core/common/: aicore_util_attr_define.h  aicore_util_types.h  graph_comm.h  json_util.h  scope_allocator.h
inc/common/util/ai_core/param_calculate/: aicore_param_calculator.h  tensorsize_calculator.h
inc/common/util/compress/: compress.h  compress_weight.h
inc/framework/common/: ge_inner_error_codes.h  ge_types.h  types.h  util.h
inc/framework/common/helper/: model_helper.h
inc/framework/common/op/: attr_value_util.h
inc/framework/executor/: ge_executor.h
inc/framework/ge_runtime/: task_info.h
inc/framework/generator/: ge_generator.h
inc/framework/memory/: memory_api.h
inc/framework/omg/: omg.h
inc/framework/omg/parser/: parser_inner_ctx.h
inc/graph/: anchor.h  attr_value_serializable.h  buffer.h  compute_graph.h  ge_context.h  ge_local_context.h  ge_tensor.h  node.h  op_desc.h  op_kernel_bin.h  operator_factory_impl.h  opsproto_manager.h  range_vistor.h  ref_relation.h  runtime_inference_context.h  shape_refiner.h  tuning_utils.h
inc/graph/debug/: ge_attr_define.h
inc/graph/detail/: any_map.h
inc/graph/utils/: graph_utils.h  node_utils.h  op_desc_utils.h  type_utils.h
inc/hccl/: base.h  cltm.h  hccl_op_base.h  hcom_ops_stores.h  hvd_adapter_pub.h
inc/mmpa/sub_inc/: mmpa_typedef_win.h  mmpa_win.h
inc/register/: register.h
inc/register/graph_optimizer/: graph_optimize_register_error_codes.h
inc/register/graph_optimizer/buffer_fusion/: buffer_fusion_constant.h  buffer_fusion_pass_base.h  buffer_fusion_pass_registry.h  buffer_fusion_pattern.h
inc/register/graph_optimizer/fusion_common/: fusion_statistic_recorder.h  graph_pass_util.h  pattern_fusion_base_pass.h
inc/register/graph_optimizer/graph_fusion/: fusion_pattern.h  graph_fusion_pass_base.h  graph_pass.h  pass.h
inc/register/proto/: insert_op.proto
inc/register/proto/caffe/: caffe.proto
inc/register/scope/: scope_graph_impl.h  scope_pass_impl.h  scope_pattern_impl.h
inc/soft_dp/: ExternalSoftDp.h
inc/tdt/: status.h  train_mode.h  tsd.h
inc/toolchain/: adx_dump_server.h  ide_daemon_api.h  ide_tlv.h  prof_acl_api.h  profiler_client.h  slog.h
inc/toolchain/bbox/: bbox_ddr_data.h  bbox_ddr_data_cloud.h  bbox_ddr_data_dc.h  bbox_ddr_data_mdc.h  bbox_ddr_data_mini.h  bbox_proxy.h  bbox_proxy_config.h  bbox_proxy_config_dc.h  bbox_proxy_config_mdc.h
inc/toolchain/bbox/device/: bbox_pub.h  bbox_pub_cloud.h  bbox_pub_mini.h  bbox_types.h
inc/toolchain/stackcore/: stackcore.h
inc/toolchain/tuning_tool/: tune_api.h
tf_adapter/: BUILD  exported_symbols.lds  module.BUILD  tf_adapter.bzl
tf_adapter/common/: common.h
tf_adapter/interface_checker/: check_interface.py
tf_adapter/interface_spec/: api_hccl_ops.pyh  api_image_ops.pyh  api_keras_to_npu.pyh  api_npu_config.pyh  api_npu_estimator.pyh  api_npu_hook.pyh  api_npu_loss_scale_manager.pyh  api_npu_loss_scale_optimizer.pyh  api_npu_ops.pyh  api_npu_optimizer.pyh  api_npu_plugin.pyh  api_npu_rnn.pyh  api_npu_scope.pyh  api_util.pyh
tf_adapter/kernels/: adam_apply_one_assign.cc  adam_apply_one_with_decay_assign.cc  amct_ascend_anti_quant.cc  amct_ascend_dequant.cc  amct_ascend_quant.cc  amct_ascend_weight_quant.cc  basic_lstm_cell.cc  basic_lstm_cell_grad.cc  decode_image_ops.cc  deformable_conv2d_ops.cc  device_queue_dataset_op.cc  dp_iterator_ops.cc  dp_iterator_ops.h  dpgroup_dataset_op.cc  dropout_ops.cc  geop_dataset_op.cc  geop_npu.cc  geop_npu.h  hccl_ops.cc  host_queue_dataset_op.cc  infeed_outfeed_ops.cc  lamb_apply_optimizer_assign.cc  lamb_apply_weight_assign.cc  lars_ops.cc  lars_v2_op.cc  log_time_stamp_ops.cc  maxpooling_op.cc  npu_aicore_ops.cc  npu_cpu_ops.cc  npu_mixed_precesion_ops.cc  npu_ops.cc  npu_sys_ctl_ops.cc  npu_unary_ops.cc  unique_parallel_ops.cc
tf_adapter/ops/: amct_ops.cc  dropout_domask_grad.cc  hccl_ops.cc  npu_aicore_ops.cc  npu_cpu_ops.cc  npu_cube_ops.cc  npu_dataset_ops.cc  npu_mixed_precesion_ops.cc  npu_ops.cc  npu_unary_ops.cc
tf_adapter/optimizers/: add_input_pass.cc  control_flow_conversion_pass.cc  control_flow_conversion_pass.h  dp_tf_ge_conversion_pass.cc  dp_tf_ge_conversion_pass.h  get_attr_optimize_pass.cc  gradient_fusion_optimizer.cc  gradient_fusion_optimizer.h  mark_noneed_optimize_pass.cc  mark_start_node_pass.cc  om_partition_subgraphs_pass.cc  om_partition_subgraphs_pass.h  om_set_var_format_pass.cc  om_set_var_format_pass.h
tf_adapter/python/: MANIFEST.in  setup.py
tf_adapter/python/npu_bridge/: __init__.py  hccl_init.py  npu_init.py
tf_adapter/python/npu_bridge/estimator/: npu_aicore_ops.py  npu_ops.py  npu_unary_ops.py
tf_adapter/python/npu_bridge/hccl/: hccl_ops.py
tf_adapter/python/npu_bridge/helper/: helper.py
tf_adapter/python/npu_bridge/image/: image_ops.py
tf_adapter/python/npu_bridge/npu_cpu/: lru_cache.py  npu_cpu_ops.py
tf_adapter/python/npu_bridge/tbe/: npu_cube_ops.py  npu_vector_ops.py
tf_adapter/swig/: ge_plugin.i
tf_adapter/util/: cache_interface.h  ge_plugin.cc  ge_plugin.h  generate_report.cc  generate_report.h  infershape_util.cc  infershape_util.h  npu_attrs.cc  npu_attrs.h  npu_ops_identifier.cc  npu_ops_identifier.h  npu_plugin.h  plugin_load_manager.cc  plugin_load_manager.h  session_manager.cc  session_manager.h
tools/: build_wheel.sh  gen_sc_makefile_bazel.py  sc_list.txt
(+15 files in other folders)
